css/style.css
/*
Colors used:
Primary dark: #4273B9
Primary light: #008AFC
White: #ffffff
Dark gray: #363636
*/

* {
  box-sizing: border-box;
}

img {
  width: 100%;
}

svg {
  width: 100%;
  max-width: 100%;
  height: auto;
}

h1 {
  font-family: 'Roboto', sans-serif;
  font-size: 26px;
  font-weight: 700;
  line-height: 1.4;
  text-transform: uppercase;
  color: #ffffff;
  padding-top: 40px;
  padding-bottom: 10px;
  text-align: center;
}

h2 {
  font-family: 'Raleway', sans-serif;
  font-size: 18px;
  font-weight: 300;
  line-height: 1.4;
  letter-spacing: 0.4em;
  text-transform: uppercase;
  color: #363636;
  padding-top: 40px;
  padding-bottom: 10px;
  text-align: center;
}

h3 {
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.6;
  text-transform: uppercase;
  color: #363636;
  padding-top: 0px;
  text-align: center;
}

header {
  background-color: #ffffff;
  /* text-align: center; */
  padding: 10px 0;
  position: fixed;
  -webkit-box-shadow: 0px 4px 10px 0px rgba(50, 50, 50, 0.2);
  -moz-box-shadow:    0px 4px 10px 0px rgba(50, 50, 50, 0.2);
  box-shadow:         0px 4px 10px 0px rgba(50, 50, 50, 0.2);
  transition-property: all;
  transition-duration: 2s;
  transition-timing-function: ease-in-out;
  width: 100%;
}

body {
  font-family: 'Roboto', sans-serif;
  font-size: 14px;
  font-weight: 300;
  line-height: 1.6;
  color: #363636;
  background-color: #ffffff;
  text-align: justify;
  /*padding-top: 40px;*/
}

ul {
  list-style: none;
  }

a {
  color: #363636;
  text-decoration: none;
}

/*
a:visited {
  color: #9c9c9c;
}
*/

a:hover,
a:focus {
  color: #4273B9;
  text-decoration: none;
}

a:active {
  color: #4273B9;
}

.strip-black {
  background-color: #363636;
  color: #ffffff;
  padding: 30px 15px;
  margin: 35px 0;
}

.strip-black-text {
  color: #ffffff;
  padding-bottom: 10px;
}

.strip-black .social-column {
  padding: 10px 0;
}

.vignette {
  padding: 20px 0;
}

.vignette h3 {
  margin: 0;
}

.vignette p {
  text-align: center;
}

.nav-up {
  top: -60px;
}

.add-space {
  padding-top: 60px;
}

@keyframes plane-move {
  0% {transform: translate(0, 0) rotate(0);}
  11% {transform: translate(100px, -45px) rotate(2deg);}
  22% {transform: translate(200px, -80px) rotate(4deg);}
  33% {transform: translate(300px, -110px) rotate(6deg);}
  44% {transform: translate(400px, -125px) rotate(8deg);}
  55% {transform: translate(500px, -125px) rotate(10deg);}
  66% {transform: translate(600px, -115px) rotate(11deg);}
  77% {transform: translate(700px, -95px) rotate(12deg);}
  88% {transform: translate(800px, -70px) rotate(13deg);}
  100% {transform: translate(900px, -40px) rotate(14deg);}
}

.plane {
  animation-duration: 7s;
  animation-name: plane-move;
  animation-iteration-count: infinite;
  animation-direction: normal;
  animation-timing-function: linear;
}


/* Highly specific styles. */

/* nav {
  display: inline-block;
  width: 100%;
} */

nav > ul {
  padding: 0;
  margin: 0;
}

nav > ul > li > a {
  padding: 0 15px;
  text-transform: uppercase;
}

/*
nav > ul > li > a:visited {
  color: #9c9c9c;
}
*/

nav > ul > li > a:active {
  color: #4273B9;
}

.button {
  display: inline-block;
  background-color: #363636;
  color: #ffffff;
  font-weight: 700;
  line-height: 1.4;
  padding: 8px;
  border-radius: 3px;
  transition-duration: 0.3s;
  transition-property: all;
}

.button:hover {
  background-color: #4273B9;
  color: #ffffff;
  text-decoration: none;
}

/*
.button:visited {
  background-color: #9c9c9c;
  color: #ffffff;
}
*/


/* Layout styling */

.container {
  padding: 0px 15px;
}

.container p {
  text-align: justify;
}

.row {
  margin: 40px 0;
}

.logo {
  max-width: 80px;
  margin-top: 2px;
}


.social-link {
  display: block;
}


.social-icons {
  display: block;
  text-align: center;
}

.social-icons > ul {
  margin: 0;
  padding: 0;
}

.social-icons > ul > li {
  padding: 0 5px;
}

.social-li {
  display: inline-block;
}

.social-icons > ul > li > a > svg {
  max-width: 35px;
  max-height: 35px;
  height: 100%;
  width: 100%;
}

.skills {
  width: 100%
}

.skills > ul {
  padding: 0;
}

.skills > ul > li {
  display: block;
  text-align: center;
}

.about-me p {
  text-align: justify;
}

.navtoggle, .navtoggle.responsive {
  position: relative;
}

.navtoggle li:not(:last-child) {
  display: none;
}

.navtoggle.responsive nav {
  padding: 24px 0 0;
}

.navtoggle.responsive li {
  display: block;
  padding: 10px 0;
  font-size: 24px;
  text-align: center;
  /* border-top: 1px solid rgba(0, 0, 0, 0.5); */
}

.navtoggle.responsive li:last-child {
  padding: 0 0 10px;
}

.hamicon {
  position: absolute;
  right: 0;
  top: 0;
  font-size: 24px;
  padding-right: 0;
}


#HERO {
  background-image: url('../img/home_about/Banner_Large.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-blend-mode: multiply;
  display: inline-block;
  background-color: #3d3d3d;
  color: #ffffff;
  padding: 30px 0;
  width: 100%;
}

#PORTFOLIO .row {
  padding-bottom: 25px;
  border-bottom: 1px solid #3d3d3d;
}

#HERO p {
  text-align: center;
  margin: 15px 10px;
}

#HERO h1 {
  margin: 0;
  padding: 0.67em 0;
}

#banner-gatlinburg {
  background-image: url('../img/gatlinburg/small/S_Banner.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-blend-mode: multiply;
  display: inline-block;
  background-color: #3d3d3d;
  color: #ffffff;
  padding: 30px 0;
  width: 100%;
}

#banner-gatlinburg h1 {
  margin: 0;
  padding: 0.67em 0;
}

#tower-activities {
  display: block;
  text-align: center;
  padding-bottom: 15px;
  border-bottom: 1px solid #3d3d3d;
}

#hero-about h1 {
  color: #181818;
  margin: 0;
  padding: 1.5em 0 1em 0;
}

#CONTACT {
  display: block;
  margin-top: 40px;
}

#COPYRIGHT {
  text-align: center;
}


/* Responsive scaling. */

/* ===========================================
Medium devices (640px and larger)
============================================*/
@media only screen and (min-width: 641px) {
  header {
    text-align: unset;
    padding: 20px 0 13px;
  }

  nav {
    width: auto;
    float: right;
    padding: 8px 0 0 0;
  }

  nav > ul {
    margin: 0;
  }

  nav > ul > li {
    display: inline-block;
  }

  p, li {
    font-size: 16px;
  }

  h1 {
    font-size: 30px;
  }

  h2, h3 {
    font-size: 20px;
  }

  .skills {
    justify-content: center;
    margin-bottom: 50px;
  }

  .skills h3 {
    text-align: left;
  }

  .skills > ul > li {
    text-align: left;
  }

  .col-md-6 {
    width: 50%;
  }

  .strip-black {
    padding: 30px 60px;
    margin: 35px 0;
  }

  .social-column img {
    padding: 30px 15px;
  }

  #HERO span {
    display: block;
  }

  #PORTFOLIO p {
    text-align: left;
  }

  .profile-photo {
    max-width: 400px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 40px;
  }

  .navtoggle li:not(:last-child) {
    display: inline-block;
  }

  .navtoggle li:last-child {
    display: none;
  }

  .nav-up {
    top: -80px;
  }

  .add-space {
    padding-top: 80px;
  }

  [class*="col-"] {
    float: left;
    padding: 0 15px;
  }

  [class*="col-"] h3 {
    margin-top: 0;
  }

  .row::after {
    content: "";
    clear: both;
    display: table;
  }
}


/* ===========================================
Large devices (1024px and larger)
============================================*/
@media only screen and (min-width: 1024px) {

  .container {
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
  }

  .logo {
    max-width: 100px;
    margin-bottom: 0;
  }

  main img {
    margin: 30px 0;
  }

  p, li {
    font-size: 16px;
  }

  h1 {
    font-size: 32px;
  }

  h2, h3 {
    font-size: 21px;
  }

  h2 {
    margin-top: 60px;
  }

  .row {
    margin: 80px 0;
  }

  .col-lg-4 {
    width: 33.33%;
  }

  .col-lg-5 {
    width: 41.66%;
  }

  .col-lg-6 {
    width: 50%;
  }

  .col-lg-7 {
    width: 58.33%;
  }

  #HERO .container {
    max-width: 60%;
    margin-top: 60px;
    margin-bottom: 70px;
  }

  [class*="col-"] {
    padding: 0 30px;
  }
}


/* ===========================================
X-Large devices (1440px and larger)
============================================*/
@media only screen and (min-width: 1440px) {

}

